--- a/.github/workflows/GitBook.yml
+++ b/.github/workflows/GitBook.yml
@@ -5,20 +5,18 @@ on:
   push:
     branches:
       - master
-
 jobs:
-  build-and-deploy:
-    name: Build and deploy
+  build:
+    name: Build Gitbook
     runs-on: ubuntu-latest
-    env:
-      MY_SECRET   : ${{secrets.GH_ACCESS_TOKEN}}
-      USER_NAME   : <Your Git username>
-      USER_EMAIL  : <Your Git email>
-      BOOK_DIR    : your_book_sources_folder_name
-
     steps:
-    - name: Checkout 🛎️
-      uses: actions/checkout@v2.3.1
-
-    - name: Build and Deploy 🚀
-      uses: onejar99/gitbook-build-publish-action@v1.0.1
+      # Check out the repo first
+      - name: Checkout code
+        uses: actions/checkout@v2
+      # Run this action to publish gitbook
+      - name: Publish
+        uses: tuliren/publish-gitbook@v1.0.0
+        with:
+          # specify either github_token or personal_token
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # personal_token: ${{ secrets.PERSONAL_TOKEN }}
